  - New Even for North Korea Related to Submarine Engines
  - Added a new raid for the United States to capture Nicolás Maduro
  - Created unique replacement ideas for each country and updated all 4 focus references (USA_chrisitian_influence)
  - Introduced priority to the Chinese decisions so custom content is closer to the top of the decisions panel

 Database:
  - Land drone technologies now properly give the Ranger Light Recce company recon bonuses like all other recon units
  - Added 160 Scud GLCMs to Ukraine
  - China now starts with the "Microprocessor" tech

 Factions:
  - Added a new faction goal "Establish an Airborne Corps"
  - CSTO should now accurately be blocked to just the joining of Post-Soviet States
  - Fixed the faction goal "Establish a Marine Corps" requiring a unit type that simply does not exist
  - Fixed the faction goal "Crush Democracy" being available to everyone including democracies
  - CSTO faction goal "Secure Central Asia" can now be completed when they are subjects themselves

 Graphics:
  - Fixed a handful of missing texticons for various unit definitions such as Stealth Corvettes, Stealth Destroyers, Stealth Frigates and more unit types
  - Fixed the missing models for the Repair Ships and Support Ships
  - Fixed a missing text icon for the CV MR Fighter, CV Light Strike Fighter when looking at unit types
  - Added new diplomatic request icons for "Propose Subsidies to Subject", "Propose/Request Energy Load Sharing", "Negotiate Operative Release", "Enforce Peace"
  - Integrated 81_evan's Iraqi flag submod to improve the flag selection for Iraq
  - Fixed the missing icon for the "Chinese Electric Car" ideas

 Game Rules:
  - Added a new game rule for Enabling/Disabling Energy Load Sharing system
  - Added a new game rule for the price per GW for the Energy Load Sharing system

 Localization:
  - Adjusted some of the wording in the Serbia joins the United Nation event so it doesn't say Yugoslavia when Serbia still exists