@@ -1,12 +1,10 @@
 gulf_society = {
+	allowed = { is_islamist_secularism_mechanic = yes }
 	icon = GFX_decisions_category_secur
-	allowed = {
-		is_islamist_secularism_mechanic = yes
-	}
+	priority = 50
 }
 
 shia_decisions = {
-	icon = power_struggle
 	allowed = {
 		OR = {
 			original_tag = SAU
@@ -17,10 +15,11 @@ shia_decisions = {
 			original_tag = UAE
 		}
 	}
+	icon = power_struggle
+	priority = 50
 }
 
 gcc_decisions = {
-	icon = GFX_decisions_category_gulf
 	allowed = {
 		OR = {
 			original_tag = SAU
@@ -36,18 +35,28 @@ gcc_decisions = {
 			original_tag = YEM
 		}
 	}
+	icon = GFX_decisions_category_gulf
+	priority = 50
 }
 
 subversive_activities = {
+	allowed = {
+		OR = {
+			original_tag = SAU
+			original_tag = QAT
+			original_tag = UAE
+			original_tag = BHR
+			original_tag = KUW
+			original_tag = OMA
+		}
+	}
 	icon = GFX_decision_espionage
+	priority = 50
 }
 
 JOR_oil_shale = {
+	allowed = { original_tag = JOR }
 	icon = GFX_decision_category_generic_propaganda
-
-	allowed = {
-		original_tag = JOR
-	}
 
 	visible = {
 		has_country_flag = JOR_agreed_oil_shale
