@@ -170,103 +170,6 @@ on_actions = {
 				add_to_variable = { child_soldiers = child_soldiers_recruitment }
 			}
 
-			# Raise/Lower Conservative Society
-			if = { limit = { has_variable = social_conservatism_society }
-				if = {
-					limit = {
-						OR = {
-							AND = {
-								has_idea = conservative_society
-								check_variable = { social_conservatism_society > 90 }
-							}
-							AND = {
-								has_idea = moderately_conservative_society
-								check_variable = { social_conservatism_society > 64 }
-							}
-							AND = {
-								has_idea = moderately_liberal_society
-								check_variable = { social_conservatism_society > 49 }
-							}
-							AND = {
-								has_idea = liberal_society
-								check_variable = { social_conservatism_society > 29 }
-							}
-							AND = {
-								has_idea = extremely_liberal_society
-								check_variable = { social_conservatism_society > 9 }
-							}
-							AND = {
-								has_idea = shia_conservative_society
-								check_variable = { social_conservatism_society > 90 }
-							}
-							AND = {
-								has_idea = shia_moderately_conservative_society
-								check_variable = { social_conservatism_society > 64 }
-							}
-							AND = {
-								has_idea = shia_moderately_liberal_society
-								check_variable = { social_conservatism_society > 49 }
-							}
-							AND = {
-								has_idea = shia_liberal_society
-								check_variable = { social_conservatism_society > 29 }
-							}
-							AND = {
-								has_idea = shia_extremely_liberal_society
-								check_variable = { social_conservatism_society > 9 }
-							}
-						}
-					}
-					country_event = { id = radicalization.5 days = 1 }
-				}
-				if = {
-					limit = {
-						OR = {
-							AND = {
-								has_idea = extremely_conservative_society
-								check_variable = { social_conservatism_society < 91 }
-							}
-							AND = {
-								has_idea = conservative_society
-								check_variable = { social_conservatism_society < 65 }
-							}
-							AND = {
-								has_idea = moderately_conservative_society
-								check_variable = { social_conservatism_society < 50 }
-							}
-							AND = {
-								has_idea = moderately_liberal_society
-								check_variable = { social_conservatism_society < 30 }
-							}
-							AND = {
-								has_idea = liberal_society
-								check_variable = { social_conservatism_society < 10 }
-							}
-							AND = {
-								has_idea = shia_extremely_conservative_society
-								check_variable = { social_conservatism_society < 91 }
-							}
-							AND = {
-								has_idea = shia_conservative_society
-								check_variable = { social_conservatism_society < 65 }
-							}
-							AND = {
-								has_idea = shia_moderately_conservative_society
-								check_variable = { social_conservatism_society < 50 }
-							}
-							AND = {
-								has_idea = shia_moderately_liberal_society
-								check_variable = { social_conservatism_society < 30 }
-							}
-							AND = {
-								has_idea = shia_liberal_society
-								check_variable = { social_conservatism_society < 10 }
-							}
-						}
-					}
-					country_event = { id = radicalization.6 days = 2 }
-				}
-			}
 			if = {
 				limit = { is_in_array = { global.ct_states = THIS } }
 				if = {
@@ -1278,11 +1181,7 @@ on_actions = {
 					if = { limit = { has_variable = social_conservatism_government }
 						if = { limit = { check_variable = { social_conservatism_government < social_conservatism_society } }
 							subtract_from_variable = { social_conservatism_society = 1 }
-							clamp_variable = {
-								var = social_conservatism_society
-								min = social_conservatism_government
-								max = 100
-							}
+							clamp_variable = { var = social_conservatism_society min = social_conservatism_government max = 100 }
 
 							if = {
 								limit = {
@@ -1350,11 +1249,8 @@ on_actions = {
 
 						if = { limit = { check_variable = { social_conservatism_government > social_conservatism_society } }
 							add_to_variable = { social_conservatism_society = 1 }
-							clamp_variable = {
-								var = social_conservatism_society
-								min = 0
-								max = social_conservatism_government
-							}
+							clamp_variable = { var = social_conservatism_society min = 0 max = social_conservatism_government }
+							update_social_conservatism_idea = yes
 
 							if = {
 								limit = {
@@ -1424,11 +1320,7 @@ on_actions = {
 					if = { limit = { is_in_array = { global.ct_states = THIS } }
 						if = { limit = { check_variable = { ct_training > 0 } }
 							subtract_from_variable = { ct_training = 0.2 }
-							clamp_variable = {
-								var = ct_training
-								min = 0
-								max = 10
-							}
+							clamp_variable = { var = ct_training min = 0 max = 10 }
 						}
 
 						# tri-monthly Radicalization Increase
