@@ -1,22 +1,16 @@
-# set_temp_variable = { temp_modify_social_con_government = +- }
+# Effect: modify_social_conservatism_government
+# Purpose: Modifies the social conservatism of thegovernment
 modify_social_conservatism_government = {
 	add_to_variable = { social_conservatism_government = temp_modify_social_con_government }
-	clamp_variable = {
-		var = social_conservatism_government
-		min = 0
-		max = 100
-	}
+	clamp_variable = { var = social_conservatism_government min = 0 max = 100 }
 	custom_effect_tooltip = conservatism_government_change_tt
 }
 
-# set_temp_variable = { temp_modify_gcc_unity = +- }
+# Effect: modify_gcc_unity
+# Purpose: Modifies the GCC Unity mechanic for the GCC
 modify_gcc_unity = {
 	add_to_variable = { global.gcc_unity = temp_modify_gcc_unity }
-	clamp_variable = {
-		var = global.gcc_unity
-		min = 0
-		max = 100
-	}
+	clamp_variable = { var = global.gcc_unity min = 0 max = 100 }
 	custom_effect_tooltip = GCC_unity_change_tt
 }
 
@@ -1438,4 +1432,111 @@ increment_arab_spring_strength = {
 	calculate_monthly_arab_spring_change = yes
 	set_temp_variable = { temp_strength = arab_spring_change }
 	change_arab_spring_strength = yes
+}
+
+
+# Effect: Update social conservatism idea
+# Purpose: Updates the social conservatism idea for Arab nations
+update_social_conservatism_idea = {
+	if = {
+		limit = { check_variable = { social_conservatism_society > 90 } }
+		if = {
+			limit = { has_idea = conservative_society }
+			swap_ideas = {
+				remove_idea = conservative_society
+				add_idea = extremely_conservative_society
+			}
+		}
+		else_if = {
+			limit = { has_idea = shia_conservative_society }
+			swap_ideas = {
+				remove_idea = shia_conservative_society
+				add_idea = shia_extremely_conservative_society
+			}
+		}
+	}
+	else_if = {
+		limit = { check_variable = { social_conservatism_society > 64 } }
+		if = {
+			limit = { has_idea = extremely_conservative_society }
+			swap_ideas = {
+				remove_idea = extremely_conservative_society
+				add_idea = conservative_society
+			}
+		}
+		else_if = {
+			limit = { has_idea = shia_extremely_conservative_society }
+			swap_ideas = {
+				remove_idea = shia_extremely_conservative_society
+				add_idea = shia_conservative_society
+			}
+		}
+	}
+	else_if = {
+		limit = { check_variable = { social_conservatism_society > 49 } }
+		if = {
+			limit = { has_idea = conservative_society }
+			swap_ideas = {
+				remove_idea = conservative_society
+				add_idea = moderately_conservative_society
+			}
+		}
+		else_if = {
+			limit = { has_idea = shia_conservative_society }
+			swap_ideas = {
+				remove_idea = shia_conservative_society
+				add_idea = shia_moderately_conservative_society
+			}
+		}
+	}
+	else_if = {
+		limit = { check_variable = { social_conservatism_society > 29 } }
+		if = {
+			limit = { has_idea = moderately_conservative_society }
+			swap_ideas = {
+				remove_idea = moderately_conservative_society
+				add_idea = moderately_liberal_society
+			}
+		}
+		else_if = {
+			limit = { has_idea = shia_moderately_conservative_society }
+			swap_ideas = {
+				remove_idea = shia_moderately_conservative_society
+				add_idea = shia_moderately_liberal_society
+			}
+		}
+	}
+	else_if = {
+		limit = { check_variable = { social_conservatism_society > 9 } }
+		if = {
+			limit = { has_idea = moderately_liberal_society }
+			swap_ideas = {
+				remove_idea = moderately_liberal_society
+				add_idea = liberal_society
+			}
+		}
+		else_if = {
+			limit = { has_idea = shia_moderately_liberal_society }
+			swap_ideas = {
+				remove_idea = shia_moderately_liberal_society
+				add_idea = shia_liberal_society
+			}
+		}
+	}
+	else = {
+		if = {
+			limit = { has_idea = liberal_society }
+			swap_ideas = {
+				remove_idea = liberal_society
+				add_idea = extremely_liberal_society
+			}
+		}
+		else_if = {
+			limit = { has_idea = shia_liberal_society }
+			swap_ideas = {
+				remove_idea = shia_liberal_society
+				add_idea = shia_extremely_liberal_society
+			}
+		}
+	}
 }
