@@ -250,93 +250,6 @@ modify_terror_threat_effect = {
 	clamp_threat = yes
 }
 
-increase_conservative_society = {
-	if = { limit = { has_idea = extremely_conservative_society }
-		remove_ideas = extremely_conservative_society
-		add_ideas = conservative_society
-	}
-	else_if = { limit = { has_idea = conservative_society }
-		remove_ideas = conservative_society
-		add_ideas = moderately_conservative_society
-	}
-	else_if = { limit = { has_idea = moderately_conservative_society }
-		remove_ideas = moderately_conservative_society
-		add_ideas = moderately_liberal_society
-	}
-	else_if = { limit = { has_idea = moderately_liberal_society }
-		remove_ideas = moderately_liberal_society
-		add_ideas = liberal_society
-	}
-	else_if = { limit = { has_idea = liberal_society }
-		remove_ideas = liberal_society
-		add_ideas = extremely_liberal_society
-	}
-
-	if = { limit = { has_idea = shia_extremely_conservative_society }
-		remove_ideas = shia_extremely_conservative_society
-		add_ideas = shia_conservative_society
-	}
-	else_if = { limit = { has_idea = shia_conservative_society }
-		remove_ideas = shia_conservative_society
-		add_ideas = shia_moderately_conservative_society
-	}
-	else_if = { limit = { has_idea = shia_moderately_conservative_society }
-		remove_ideas = shia_moderately_conservative_society
-		add_ideas = shia_moderately_liberal_society
-	}
-	else_if = { limit = { has_idea = shia_moderately_liberal_society }
-		remove_ideas = shia_moderately_liberal_society
-		add_ideas = shia_liberal_society
-	}
-	else_if = { limit = { has_idea = shia_liberal_society }
-		remove_ideas = shia_liberal_society
-		add_ideas = shia_extremely_liberal_society
-	}
-}
-
-decrease_conservative_society = {
-	if = { limit = { has_idea = conservative_society }
-		remove_ideas = conservative_society
-		add_ideas = extremely_conservative_society
-	}
-	else_if = { limit = { has_idea = moderately_conservative_society }
-		remove_ideas = moderately_conservative_society
-		add_ideas = conservative_society
-	}
-	else_if = { limit = { has_idea = moderately_liberal_society }
-		remove_ideas = moderately_liberal_society
-		add_ideas = moderately_conservative_society
-	}
-	else_if = { limit = { has_idea = liberal_society }
-		remove_ideas = liberal_society
-		add_ideas = moderately_liberal_society
-	}
-	else_if = { limit = { has_idea = extremely_liberal_society }
-		remove_ideas = extremely_liberal_society
-		add_ideas = liberal_society
-	}
-	else_if = { limit = { has_idea = shia_conservative_society }
-		remove_ideas = shia_conservative_society
-		add_ideas = shia_extremely_conservative_society
-	}
-	else_if = { limit = { has_idea = shia_moderately_conservative_society }
-		remove_ideas = shia_moderately_conservative_society
-		add_ideas = shia_conservative_society
-	}
-	else_if = { limit = { has_idea = shia_moderately_liberal_society }
-		remove_ideas = shia_moderately_liberal_society
-		add_ideas = shia_moderately_conservative_society
-	}
-	else_if = { limit = { has_idea = shia_liberal_society }
-		remove_ideas = shia_liberal_society
-		add_ideas = shia_moderately_liberal_society
-	}
-	else_if = { limit = { has_idea = shia_extremely_liberal_society }
-		remove_ideas = shia_extremely_liberal_society
-		add_ideas = shia_liberal_society
-	}
-}
-
 set_counter_terror_influencer = {
 	# Middle East Counter Terror
 	clr_country_flag = middle_east_influencer
