@@ -124,36 +124,6 @@ country_event = {
 	}
 }
 
-#event that increases social conservatism ideas
-country_event = {
-	id = radicalization.5
-	title = radicalization.5.t
-	desc = radicalization.5.d
-	picture = GFX_generic_islamic_rally
-	is_triggered_only = yes
-
-	option = {
-		name = radicalization.5.a
-		log = "[GetDateText]: [This.GetName]: radicalization.5.a executed"
-		decrease_conservative_society = yes
-	}
-}
-
-# Event Decreases the Social Conservatism Ideas
-country_event = {
-	id = radicalization.6
-	title = radicalization.6.t
-	desc = radicalization.6.d
-
-	picture = GFX_generic_islamic_rally
-	is_triggered_only = yes
-
-	option = {
-		name = radicalization.6.a
-		log = "[GetDateText]: [This.GetName]: radicalization.6.a executed"
-		increase_conservative_society = yes
-	}
-}
 
 # Number of [ROOT.GetAdjective] Joining Extremist Groups on the Rise
 country_event = {
