@@ -2751,49 +2751,11 @@ country_event = {
 
 	option = {
 		name = gcc.11.a
-		if = {
-			limit = { NOT = { original_tag = BHR } BHR = { has_idea = idea_gcc_member_state } }
-			give_guarantee = BHR
-		}
-		if = {
-			limit = { NOT = { original_tag = EGY } EGY = { has_idea = idea_gcc_member_state } }
-			give_guarantee = EGY
-		}
-		if = {
-			limit = { NOT = { original_tag = JOR } JOR = { has_idea = idea_gcc_member_state } }
-			give_guarantee = JOR
-		}
-		if = {
-			limit = { NOT = { original_tag = KUW } KUW = { has_idea = idea_gcc_member_state } }
-			give_guarantee = KUW
-		}
-		if = {
-			limit = { NOT = { original_tag = IRQ } IRQ = { has_idea = idea_gcc_member_state } }
-			give_guarantee = IRQ
-		}
-		if = {
-			limit = { NOT = { original_tag = MOR } MOR = { has_idea = idea_gcc_member_state } }
-			give_guarantee = MOR
-		}
-		if = {
-			limit = { NOT = { original_tag = OMA } OMA = { has_idea = idea_gcc_member_state } }
-			give_guarantee = OMA
-		}
-		if = {
-			limit = { NOT = { original_tag = QAT } QAT = { has_idea = idea_gcc_member_state } }
-			give_guarantee = QAT
-		}
-		if = {
-			limit = { NOT = { original_tag = SAU } SAU = { has_idea = idea_gcc_member_state } }
-			give_guarantee = SAU
-		}
-		if = {
-			limit = { NOT = { original_tag = UAE } UAE = { has_idea = idea_gcc_member_state } }
-			give_guarantee = UAE
-		}
-		if = {
-			limit = { NOT = { original_tag = YEM } YEM = { has_idea = idea_gcc_member_state } }
-			give_guarantee = YEM
+		every_other_country = {
+			limit = { has_idea = idea_gcc_member_state }
+			PREV = {
+				give_guarantee = PREV
+			}
 		}
 		if = {
 			limit = { tag = TUR }
