@@ -93,7 +93,7 @@
 
  #GCC
  gulf_society: "Islamism & Secularism"
- gulf_society_desc: "§Y[ROOT.GetFlag]Our country's§! society remains deeply religious. As a consequence our §Y[ROOT.GetFlag]government's§! continued popularity relies on our religious credentials, and as such we must be cautious about pursuing policies that could lead to accusations of impiety. The existence of alternative sources of religious legitimacy in the form of populist Islamist groups poses a constant threat to our power. If the popularity of such groups gets out of hand, we may have to consider a broad crackdown.\n\nA major factor in §Y[ROOT.GetFlag]our government's§! religious legitimacy is our adherence to conservative social values. Pursuing socially §1liberal§! policies too quickly risks increasing support for Islamist alternatives and the §RRadicalization§! of society. We can reduce this risk by making sure not to decrease £pol_idea §GSocial Conservatism - Government§!, which is affected by focuses and decisions, too far below £population_texticon §YSocial Conservatism - Society§!, which gradually rises and falls to match the former. £population_texticon §YSocial Conservatism - Society§! determines the extent to which society is either conservative or liberal, with high levels of conservatism granting more political power and salafist drift while high levels of liberalism grant a higher trade opinion factor and western drift.\n\n£pol_idea §GSocial Conservatism - Government§!: [?ROOT.social_conservatism_government]%\n£population_texticon  §YSocial Conservatism - Society§!: [?ROOT.social_conservatism_society]%"
+ gulf_society_desc: "§Y[ROOT.GetFlag]Our country's§! society remains deeply religious. As a consequence our §Y[ROOT.GetFlag]government's§! continued popularity relies on our religious credentials, and as such we must be cautious about pursuing policies that could lead to accusations of impiety. The existence of alternative sources of religious legitimacy in the form of populist Islamist groups poses a constant threat to our power. If the popularity of such groups gets out of hand, we may have to consider a broad crackdown.\n\nA major factor in §Y[ROOT.GetFlag]our government's§! religious legitimacy is our adherence to conservative social values. Pursuing socially §1liberal§! policies too quickly risks increasing support for Islamist alternatives and the §RRadicalization§! of society. We can reduce this risk by making sure not to decrease £pol_idea §GSocial Conservatism - Government§!, which is affected by focuses and decisions, too far below £population_texticon §YSocial Conservatism - Society§!, which gradually rises and falls to match the former. £population_texticon §YSocial Conservatism - Society§! determines the extent to which society is either conservative or liberal, with high levels of conservatism granting more political power and salafist drift while high levels of liberalism grant a higher trade opinion factor and western drift.\n\n£pol_idea §GSocial Conservatism - Government§!: [?ROOT.social_conservatism_government]%\n£population_texticon  §YSocial Conservatism - Society§!: [?ROOT.social_conservatism_society]%\n\nYour §YSocial Conservatism - Society§! ideas will update once a month with the monthly tick."
  GCC_crack_down_on_muslim_broterhood: "§YCrack Down§! on the Muslim Brotherhood"
  GCC_crack_down_on_muslim_broterhood_desc: "The Muslim Brotherhood is a Sunni organization that adheres to a populist form of Islam. This means that the Muslim Brotherhood and its affiliates are not only a source of pressure to democratize but are also popular with religious elements in society, making them a threat to authoritarian governments that similarly rely on religious legitimation."
  GCC_stop_crackdowns: "§YStop§! Muslim Brotherhood Crackdowns"
@@ -428,14 +428,6 @@
  influences_other_middle_eastern_country_tt: "Has influence in at least one other Middle Eastern or North African country"
  influences_african_country_tt: "Has influence in at least one Sub-Saharan African country"
  influences_asian_country_tt: "Has influence in at least one Central or South Asian country"
-
- radicalization.5.t: "The [ROOT.GetAdjective] People Grow More Socially Conservative"
- radicalization.5.d: "Our government's policies have started to take effect as it is increasingly becoming clear that the people of [ROOT.GetNameDef] are more closely observing the teachings of Islam, adopting a more pious approach to everyday life. Stricter interpretations of Islam have become more popular, and deviance from religious norms is tolerated less."
- radicalization.5.a: "Traditional values are being consolidated."
-
- radicalization.6.t: "The [ROOT.GetAdjective] People Grow More Socially Liberal"
- radicalization.6.d: "The policies of our government have started to change attitudes in [ROOT.GetNameDef], as relatively progressive values have increasingly taken root in our country's people. The youth especially have started to adopt more relaxed attitudes towards their religion, and Islam has come to influence their everyday lives less than was the case with previous generations."
- radicalization.6.a: "Liberal values are being consolidated."
 
  radicalization.7.t: "Number of [ROOT.GetAdjective] Citizens Joining Extremist Groups on the Rise"
  radicalization.7.d: "An increasing number of radicalized youths in our country are joining Salafi jihadist groups that seek to overthrow our government. We ignore this growing terrorist threat at our own peril."
