@@ -115,6 +115,7 @@ v1.12.4
   - Added a new raid for the United States to capture Nicolás Maduro
   - Created unique replacement ideas for each country and updated all 4 focus references (USA_chrisitian_influence)
   - Introduced priority to the Chinese decisions so custom content is closer to the top of the decisions panel
+  - Introduced priority to the GCC decisions and other unique and custom mechanics
 
  Database:
   - Land drone technologies now properly give the Ranger Light Recce company recon bonuses like all other recon units
@@ -159,7 +160,8 @@ v1.12.4
   - Optimized some early European Union initialization to be more performant in the early game when loading histories
   - Refactored the power ranking system so it's 33% faster on the weekly ticks to improve tick speed
   - Improved the weekly tick by reordering/shifting content around and reducing the check count to better optimize the mod
-  - Moved the European Union's checking of breaching to monthly
+  - Moved the European Union's checking of EU breach of values to monthly
+  - Moved a check for the social conservatism and optimized a check for the Gulf Countries
 
  Sound:
   - Ensured that voicelines for various nations are saved in the proper format as to prevent nonsense errors in the logs
